Debian systemd fixes (fixing carbonapi/issues/551)

--- a/docker/debian-stretch/nfpm.yaml
+++ b/docker/debian-stretch/nfpm.yaml
@@ -14,7 +14,7 @@ files:
    ./usr/bin/carbonapi: "/usr/bin/carbonapi"
    ./usr/share/carbonapi/carbonapi.example.yaml: "/usr/share/carbonapi/carbonapi.example.yaml"
 config_files:
-   ./etc/sysconfig/carbonapi: "/etc/sysconfig/carbonapi"
+   ./etc/default/carbonapi: "/etc/default/carbonapi"
    ./etc/systemd/system/carbonapi.service: "/etc/systemd/system/carbonapi.service"
 scripts:
     postinstall: /root/go/src/github.com/go-graphite/carbonapi/contrib/carbonapi/fpm/systemd-reload.sh
