--- a/docker/ubuntu-2004/Dockerfile
+++ b/docker/ubuntu-2004/Dockerfile
@@ -2,7 +2,7 @@ FROM ubuntu:20.04
 MAINTAINER Vladimir Smirnov <civil.over@gmail.com>
 
 # Make sure the package repository is up to date.
-ARG CACHE_DATE=20200708
+ARG CACHE_DATE=20210517
 ARG DEBIAN_FRONTEND=noninteractive
 RUN apt-get update
 RUN apt-get -y upgrade
@@ -10,14 +10,16 @@ RUN apt-get install -y git openssh-server libcairo2-dev mercurial build-essentia
 RUN mkdir -p /var/run/sshd
 
 # Install Go and other deps
-RUN wget -q -O/tmp/go.tar.gz https://dl.google.com/go/go1.14.4.linux-amd64.tar.gz
+RUN wget -q -O/tmp/go.tar.gz https://golang.org/dl/go1.16.4.linux-amd64.tar.gz
 RUN tar -xf /tmp/go.tar.gz -C /usr/local/
 RUN rm -f /tmp/go.tar.gz
 
 # Install nfpm
 ENV PATH="${PATH}:/usr/local/go/bin"
-RUN go get -u github.com/goreleaser/nfpm/cmd/nfpm
+RUN curl -sfL https://install.goreleaser.com/github.com/goreleaser/nfpm.sh | sh
+RUN mkdir -p /root/go
 RUN rm -rf /root/go/src
+RUN nfpm -v
 
 ADD pack.sh /root
 ADD create_package_deb.sh /root
