--- a/docker/debian-stretch/nfpm.yaml
+++ b/docker/debian-stretch/nfpm.yaml
@@ -16,5 +16,6 @@ files:
 config_files:
    ./etc/default/carbonapi: "/etc/default/carbonapi"
    ./etc/systemd/system/carbonapi.service: "/etc/systemd/system/carbonapi.service"
+   ./etc/logrotate.d/carbonapi: "/etc/logrotate.d/carbonapi"
 scripts:
     postinstall: /root/go/src/github.com/go-graphite/carbonapi/contrib/carbonapi/fpm/systemd-reload.sh
