--- a/docker/ubuntu-2004/nfpm.yaml
+++ b/docker/ubuntu-2004/nfpm.yaml
@@ -18,6 +18,6 @@ files:
 config_files:
    ./etc/default/carbonapi: "/etc/default/carbonapi"
    ./etc/systemd/system/carbonapi.service: "/etc/systemd/system/carbonapi.service"
-   /root/go/src/github.com/go-graphite/carbonapi/contrib/carbonapi/deb/carbonapi.logrotate: "/etc/logrotate.d/carbonapi"
+   ./etc/logrotate.d/carbonapi: "/etc/logrotate.d/carbonapi"
 scripts:
     postinstall: /root/go/src/github.com/go-graphite/carbonapi/contrib/carbonapi/fpm/systemd-reload.sh
