--- a/docker/ubuntu-1804/nfpm.yaml
+++ b/docker/ubuntu-1804/nfpm.yaml
@@ -4,20 +4,53 @@ platform: "linux"
 version: "${MY_APP_VERSION}"
 section: "default"
 priority: "extra"
-depends:
-- libcairo2
 maintainer: "Vladimir Smirnov <civil.over@gmail.com>"
 description: "carbonapi: replacement for graphite API server"
 homepage: "https://github.com/go-graphite/carbonapi"
 license: "BSD-2"
-empty_folders:
-   - /etc/carbonapi
-files:
-   ./usr/bin/carbonapi: "/usr/bin/carbonapi"
-   ./usr/share/carbonapi/carbonapi.example.yaml: "/usr/share/carbonapi/carbonapi.example.yaml"
-config_files:
-   ./etc/default/carbonapi: "/etc/default/carbonapi"
-   ./etc/systemd/system/carbonapi.service: "/etc/systemd/system/carbonapi.service"
-   ./etc/logrotate.d/carbonapi: "/etc/logrotate.d/carbonapi"
+contents:
+  -
+    src: ./usr/bin/carbonapi
+    dst: /usr/bin/carbonapi
+  -
+    src: ./usr/share/carbonapi/carbonapi.example.yaml
+    dst: /usr/share/carbonapi/carbonapi.example.yaml
+  -
+    src: /root/go/src/github.com/go-graphite/carbonapi/contrib/carbonapi/rhel/carbonapi.service
+    dst: /etc/systemd/system/carbonapi.service
+    type: config|noreplace
+    packager: rpm
+  -
+    src: /root/go/src/github.com/go-graphite/carbonapi/contrib/carbonapi/deb/carbonapi.service
+    dst: /etc/systemd/system/carbonapi.service
+    type: config|noreplace
+    packager: deb
+  -
+    src: /root/go/src/github.com/go-graphite/carbonapi/contrib/carbonapi/common/carbonapi.env
+    dst: /etc/sysconfig/carbonapi
+    type: config|noreplace
+    packager: rpm
+  -
+    src: /root/go/src/github.com/go-graphite/carbonapi/contrib/carbonapi/common/carbonapi.env
+    dst: /etc/default/carbonapi
+    type: config
+    packager: deb
+  -
+    src: /root/go/src/github.com/go-graphite/carbonapi/contrib/carbonapi/rhel/carbonapi.logrotate
+    dst: /etc/logrotate.d/carbonapi
+    type: config|noreplace
+    packager: rpm
+  -
+    src: /root/go/src/github.com/go-graphite/carbonapi/contrib/carbonapi/deb/carbonapi.logrotate
+    dst: /etc/logrotate.d/carbonapi
+    type: config
+    packager: deb
 scripts:
     postinstall: /root/go/src/github.com/go-graphite/carbonapi/contrib/carbonapi/fpm/systemd-reload.sh
+overrides:
+  deb:
+    depends:
+      - libcairo2
+  rpm:
+    depends:
+      - cairo
