--- a/docker/ubuntu-1804/Dockerfile
+++ b/docker/ubuntu-1804/Dockerfile
@@ -2,22 +2,23 @@ FROM ubuntu:18.04
 MAINTAINER Vladimir Smirnov <civil.over@gmail.com>
 
 # Make sure the package repository is up to date.
-ARG CACHE_DATE=20210905
+ARG CACHE_DATE=20220522
 RUN apt-get update
 RUN apt-get -y upgrade
 RUN apt-get install -y git openssh-server libcairo2-dev mercurial build-essential lsb-release curl
 RUN mkdir -p /var/run/sshd
 
 # Install Go and other deps
-RUN wget -q -O/tmp/go.tar.gz https://golang.org/dl/go1.17.linux-amd64.tar.gz
+RUN wget -q -O/tmp/go.tar.gz https://golang.org/dl/go1.18.2.linux-amd64.tar.gz
 RUN tar -xf /tmp/go.tar.gz -C /usr/local/
 RUN rm -f /tmp/go.tar.gz
+RUN mkdir -p /root/go
+RUN rm -rf /root/go/src
 
 # Install nfpm
 ENV PATH="${PATH}:/usr/local/go/bin"
-RUN curl -sfL https://install.goreleaser.com/github.com/goreleaser/nfpm.sh | sh
-RUN mkdir -p /root/go
-RUN rm -rf /root/go/src
+RUN wget -q -O/tmp/nfpm.tar.gz https://github.com/goreleaser/nfpm/releases/download/v2.15.1/nfpm_2.15.1_Linux_x86_64.tar.gz
+RUN tar -xf /tmp/nfpm.tar.gz -C /usr/local/bin
 RUN nfpm -v
 
 ADD pack.sh /root
