--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,16 +24,20 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Check out the repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       -
         name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+        uses: docker/setup-qemu-action@v2
       -
         name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        id: buildx
+        uses: docker/setup-buildx-action@v2
+      -
+        name: Available platforms
+        run: echo ${{ steps.buildx.outputs.platforms }}
       # Runs a single command using the runners shell
       - name: Log in to GitHub Docker Registry
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
@@ -41,49 +45,49 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: Build ubuntu-22.04 image
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v3
         with:
           push: true
           context: ./docker/ubuntu-2204
-          tags: ghcr.io/go-graphite/go-graphite-build-ubuntu:20.04
+          tags: ghcr.io/go-graphite/go-graphite-build-ubuntu:22.04
       - name: Build ubuntu-20.04 image
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v3
         with:
           push: true
           context: ./docker/ubuntu-2004
           tags: ghcr.io/go-graphite/go-graphite-build-ubuntu:20.04
       - name: Build ubuntu-18.04 image
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v3
         with:
           push: true
           context: ./docker/ubuntu-1804
           tags: ghcr.io/go-graphite/go-graphite-build-ubuntu:18.04
       - name: Build debian-bookworm image
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v3
         with:
           push: true
           context: ./docker/debian-bookworm
           tags: ghcr.io/go-graphite/go-graphite-build-debian:bookworm
       - name: Build debian-bullseye image
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v3
         with:
           push: true
           context: ./docker/debian-bullseye
           tags: ghcr.io/go-graphite/go-graphite-build-debian:bullseye
       - name: Build debian-buster image
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v3
         with:
           push: true
           context: ./docker/debian-buster
           tags: ghcr.io/go-graphite/go-graphite-build-debian:buster
       - name: Build rockylinux-8 image
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v3
         with:
           push: true
           context: ./docker/rockylinux-8
           tags: ghcr.io/go-graphite/go-graphite-build-rockylinux:8
       - name: Build debian-stretch image
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v3
         with:
           push: true
           context: ./docker/centos-7
