--- a/.github/workflows/build-image-debian-buster.yml
+++ b/.github/workflows/build-image-debian-buster.yml
@@ -1,7 +1,5 @@
 # This is a basic workflow to help you get started with Actions
-
-name: create-build-images
-
+name: create-build-images-debian-buster
 # Controls when the action will run. 
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
