--- a/docker/debian-bullseye/Dockerfile
+++ b/docker/debian-bullseye/Dockerfile
@@ -9,7 +9,7 @@ RUN apt-get install -y wget curl apt-utils git openssh-server libcairo2-dev merc
 RUN mkdir -p /var/run/sshd
 
 # Install Go and other deps
-RUN wget -q -O/tmp/go.tar.gz https://golang.org/dl/go1.18.2.linux-amd64.tar.gz
+RUN wget -q -O/tmp/go.tar.gz https://go.dev/dl/go1.19.linux-amd64.tar.gz
 RUN tar -xf /tmp/go.tar.gz -C /usr/local/
 RUN rm -f /tmp/go.tar.gz
 RUN mkdir -p /root/go
